refactor security configuration and add UserInfoResponse DTO